# CompPhysExercises

./: .gitignore  9impsampling.nb
randu/: .RData  .Rhistory  (+3 more)
src/: .dir-locals.el  CMakeLists.txt
src/0randwalk/: CMakeCache.txt  CMakeLists.txt  randwalk.cpp
src/10impddim/: impddim.cpp
src/11isingsann/: CMakeLists.txt  CMakeLists.txt~  isingsann.cpp  isingsann.cpp~
src/12markchain/: CMakeLists.txt  markchain.cpp
src/13slicesample/: CMakeLists.txt  slicesample.cpp
src/14sstruncnorm/: .dir-locals.el  CMakeLists.txt  sstruncnorm.cpp
src/15xymodelsdl/: CMakeLists.txt  sdlmini.cpp  xymodelsdl.cpp
src/1standnorm/: .dir-locals.el  .dir-locals.el~  CMakeLists.txt  standnorm.cpp  standnorm.cpp~
src/2standnormroot/: CMakeLists.txt  standnormroot.cpp
src/3randuroot/: CMakeLists.txt  randuroot.cpp
src/4boxmullerroot/: CMakeLists.txt  boxmullerroot.cpp
src/5polarroot/: CMakeLists.txt  polarroot.cpp
src/6badlcgpolar/: CMakeLists.txt  badlcgpolar.cpp
src/6normalaccrej/: normalaccrej.cpp
src/7normalaccrej/: CMakeLists.txt  normalaccrej.cpp
src/8monteintegr/: CMakeLists.txt  monteintegr.cpp
src/9impsampling/: CMakeLists.txt  impsampling.cpp
src/GL/: CMakeLists.txt
src/GL/1mygldemo/: CMakeLists.txt  mygldemo.cpp~
src/GL/2myqttest/: CMakeLists.txt  CMakeLists.txt~  mygldemo.cpp
src/GL/3mygldemo2/: CMakeLists.txt  mygldemo2.cpp
src/GL/4mysdltest/: .dir-locals.el  CMakeLists.txt  mysdltest.cpp
src/GL/5sdlising/: CMakeLists.txt  sdlising.cpp
src/GL/6mycalcpi/: CMakeLists.txt  CMakeLists.txt~  mycalcpi.cpp
src/GL/demos/: tutorial06.cpp
(+13 files in other folders)
